*Empty MediaWiki Message*

--- a/New_York_Lakanbalen.mw
+++ b/New_York_Lakanbalen.mw
@@ -53,6 +53,8 @@
 |footnotes = 
 }}
 
+Ing '''New York Lakanbalen''' (opisyal'''Ing Lakanabalen ning New York''') iya ing [[List of United States cities by population|pekamaragul a lakanbalen]] king [[United States]], nung nu ing kayang [[New York metropolitan area|metropolitan karinan]] ing rangku na iti ing metung a  [[List of metropolitan areas by population|pekamaragula a urban a karinan]] keti yatu. Deng  [[Netherlands|Dutch]] tetag de bilang kalakalan a karinan inyang 1625, iti migsilbi ya bialng tungku ing United States maniabt 1785 anggang 1790, at iti ing pekamaragul a lakanbalen ning bangsa manibat inyang 1790.  Atiu keng pekamasanting diling [[New York Harbor|pantalan]] keti yatu, ing New York metung ya  kareng pangkalibudtaran ning yatung [[pangkalakalan]] ampong [[panyalapi]].  is one of the world's major centers of [[commerce]] and [[finance]]. Ing New York atin ya naman pangyatung uyab keng [[Mass media|media]], [[pamagaral]], [[entertainment]], [[The arts|alit]], [[fashion]] ampong[[advertising]]. Ing lakanbalen metung ya naman pun kareng pangkilual bangsa, nung nu iti ing punabala keng pun tanggapanning [[United Nations]].
+
 [[Image:Castelloplan.jpg|230px|thumb|Lower Manhattan in 1660, when it was part of [[New Amsterdam]].]]
 [[Image:Old timer structural worker.jpg|thumb|left|230px|Construction of the [[Empire State Building]], 1930.]]
 [[Image:Aster newyorkcity lrg.jpg|230px|thumb|right|Satellite image showing most of the five boroughs, portions of eastern New Jersey, and the main waterways around New York harbor.]]
