*Empty MediaWiki Message*

--- a/Dindigul.mw
+++ b/Dindigul.mw
@@ -18,7 +18,7 @@ vehicle_code_range= TN 57|
 footnotes = | 
 }}
 
-Ing '''Dindigul''' ([[Tamil language|Tamil]]: திண்டுக்கல்) metung yang lakanbalen o ciudad ampong municipality king estadu ning [[Tamil Nadu]] king mauling (''southern'') [[India]]. Iti ing pun tanggapan pangkapanibalan (''administrative headquarters'') ning [[Dindigul (distritu)]].  
+Ing '''Dindigul''' ([[Tamil language|Tamil]]: திண்டுக்கல்) metung yang lakanbalen o ciudad ampong [[w:municipality|munisipalidad]] king estadu ning [[Tamil Nadu]] king mauling (''southern'') [[India]]. Iti ing pun tanggapan pangkapanibalan (''administrative headquarters'') ning [[Dindigul (distritu)]].  
 
 ==Dalerayan==
 <references/>
