*Empty MediaWiki Message*

--- a/Dindigul.mw
+++ b/Dindigul.mw
@@ -23,7 +23,7 @@ Ing '''Dindigul''' ([[Tamil language|Tamil]]: திண்டுக்கல்)
 ==Dalerayan==
 <references/>
 
-[[Image:Dindigul.cvs.jpg|thumb|center|400px|Ing Dindigul manibat king kutang batau (''rock fort'')]]
+[[Image:Dindigul.cvs.jpg|thumb|center|400px|Ing Dindigul manibat king kutang batu (''rock fort'')]]
 
 ==Suglung palual==
 *[http://dindigul.nic.in/ Dindigul District official web site]
