*Empty MediaWiki Message*

--- a/Chicago.mw
+++ b/Chicago.mw
@@ -54,6 +54,23 @@
 |footnotes = 
 }}
 
+Ing '''[[Chicago]]''' ({{IPAEng|ʃɪˈkɑːgoʊ}}) iya ing pekamaragul diling lakanbalen karas keng populasyun keng state ning [[Illinois]] ampong ing [[Midwestern United States|Midwest]], at metung yang mangibabong kalibutarang panyalapi, industria at kalinangan ning labuad. Ing lakanbalen makaba yang meging "kaduang lakanbalen"  (kadua keng populasyun keng New York), ampong kasalungsunganing [[List of United States cities by population|pangatlung peka-marakal a populasyun]] a lakanbalen keng [[United States]], a atinmga 3 yutang katau. 
+
+
+[[Image:Chicago-fire1.jpg|thumb|Ing Talaalit a ginulis ning [[1871 Great Chicago Fire|Maragul  a Silab ning Chicago inyang 1871]]]]
+
+[[Image:Water Tower - Chicago Nov 2004.jpg|thumb|right|Ing [[Chicago Water Tower]], metung kareng ditak a mitagan a pakatalakad kaibat ning [[1871 Great Chicago Fire|Maragul  a Silab ning Chicago inyang 1871]].]]
+
+[[Image:Chicago buildings 01.jpg|thumb|right|Ing [[Sears Tower]], a mika 108 Palapag, stands as Chicago's tallest building since its completion in 1974 and is the tallest building in the [[Western Hemisphere]].]] 
+
+[[Image:Chicago Downtown Aerial View.jpg|thumb|right|Mayayakit keng makatas angin ing downtown Chicago makalawe keng pangulu neng panaun ning dimla.]]
+
+
+[[Image:Chicago-lighthouse.jpg|thumb|right|[[Chicago Harbor Lighthouse]]]]
+
+
+[[Image:BuildingsLiningChicagoRiver.jpg|thumb|right|Deng pakatalakad tukituki keng Ilug ning Chicago.]]
+
 ==Suglung Palwal==
 *[http://www.corile-design.co.uk/PChicago.htm Paintings of Chicago]By Mario Corile
 *[http://www.cityofchicago.org/ Official City Website]
