--- a/Houston,_Texas.mw
+++ b/Houston,_Texas.mw
@@ -48,7 +48,7 @@
 |footnotes =
 }}
 
-==External links==
+==Suglung Palual==
 {{portalpar|Houston|Flag of Houston, Texas.png}}
 {{portalpar|Texas|Texasflaginstate.png}}
 {{sisterlinks|Houston}}
