interlingual wiki link

--- a/Asu.mw
+++ b/Asu.mw
@@ -113,10 +113,10 @@ aliwang bansa nung nu ro tuturing a sese deng asu at e pamangan.
 [[Category:Pets]]  [[Category:Sese]]  [[Category:Asu]]
 
 [[af:Hond]]
-[[ar:???]]
+[[ar:كلب (حيوان)]]
 [[an:Can]]
 [[ast:Perru]]
-[[bg:??????? ????]]
+[[bg:Домашно куче]]
 [[bm:Wùlù]]
 [[bo:????]]
 [[ca:Gos]]
@@ -126,26 +126,26 @@ aliwang bansa nung nu ro tuturing a sese deng asu at e pamangan.
 [[en:Dog]]
 [[es:Perro]]
 [[eo:Hundo]]
-[[fa:??]]
+[[fa:سگ]]
 [[fr:Chien]]
 [[gd:Cù]]
 [[ko:?]]
 [[io:Hundo]]
 [[ia:Can]]
 [[it:Cane]]
-[[he:???]]
+[[he:כלב]]
 [[lt:Šuo]]
 [[lb:Haushond]]
 [[hu:Kutya]]
 [[nl:Hond]]
-[[ja:??]]
+[[ja:イヌ]]
 [[no:Tamhund]]
 [[nn:Hund]]
 [[oc:Ca]]
 [[pl:Pies domowy]]
 [[pt:Cão]]
 [[ro:Câine]]
-[[ru:?????? ????????]]
+[[ru:Домашняя собака]]
 [[sk:Pes domáci]]
 [[sr:???]]
 [[fi:Koira]]
