+[[es:Medellín (Cebú)]]

--- a/Medellin.mw
+++ b/Medellin.mw
@@ -44,6 +44,7 @@ Ing Medellin atin yang 19 a [[barangay]].
 [[ceb:Medellin, Sugbo]]
 [[de:Medellin (Cebu)]]
 [[en:Medellin, Cebu]]
+[[es:Medellín (Cebú)]]
 [[ilo:Medellin, Cebu]]
 [[nl:Medellin (Cebu)]]
 [[tl:Medellin, Cebu]]
