*Empty MediaWiki Message*

--- a/Dwarka.mw
+++ b/Dwarka.mw
@@ -1,6 +1,5 @@
-{{Cleanup|date=February 2008}}
-{{otheruses4|a city in Gujarat|the sub-city in Delhi|Dwarka (Delhi)}}
-{{otheruses4|a city in Gujarat|the kingdom of Dwaraka in Indian epic literature|Dwaraka Kingdom}}
+{{otheruses4|lakanbalen king Gujarat|ing sub-city king Delhi|Dwarka (Delhi)}}
+{{otheruses4|lakanbalen king Gujarat|kaarian ning Dwaraka kareng epiku ning India|Kaariang Dwaraka}}
 <!-- See [[Wikipedia:WikiProject Indian cities]] for details -->{{Infobox Indian Jurisdiction 
 |native_name = Dwarka | 
 type = city | 
