--- a/Dwarka.mw
+++ b/Dwarka.mw
@@ -1,5 +1,5 @@
 {{otheruses4|lakanbalen king Gujarat|king sub-city king Delhi|Dwarka (Delhi)}}
-{{otheruses4|lakanbalen king Gujarat|king kaarian ning Dwaraka kareng epiku ning India|Kaariang Dwaraka}}
+{{otheruses4|lakanbalen king Gujarat|king kaarian ning Dwaraka ampo kareng epiku ning India|Kaariang Dwaraka}}
 <!-- See [[Wikipedia:WikiProject Indian cities]] for details -->{{Infobox Indian Jurisdiction 
 |native_name = Dwarka | 
 type = city | 
