*Empty MediaWiki Message*

--- a/Etah.mw
+++ b/Etah.mw
@@ -1,4 +1,4 @@
-{{dablink|[[Etah, Greenland]] was a village of [[Inughuit]]}}
+{{dablink|Ing [[Etah, Greenland]] metung yang sadiang nayun ning [[Inughuit]]}}
 <!-- See [[Wikipedia:WikiProject Indian cities]] for details -->
 {{Infobox Indian Jurisdiction |
 native_name = Etah | 
