*Empty MediaWiki Message*

--- a/Template:Potd%2F2008-08-11_(pam).mw
+++ b/Template:Potd%2F2008-08-11_(pam).mw
@@ -1,1 +1,1 @@
-Metung a sampagang ''[[Nelumbo nucifera]]'' king [[Botanic Garden, Adelaide]], [[South Australia]]<noinclude>[[Category:Potd templates]]</noinclude>
+Ing [[:en:Wat Chaiwatthanaram|Wat Chai Watthanaram]], Parkeng Pangkasalesayan ning [[Ayutthaya]], kalibudtang [[Thailand]]<noinclude>[[Category:Potd templates]]</noinclude>
