*Empty MediaWiki Message*

--- a/Houston,_Texas.mw
+++ b/Houston,_Texas.mw
@@ -73,6 +73,7 @@ Ing '''Houston''' (mayayagkas /ˈhjuːstən/) iya ing pangapat a pekamaragul a l
 {{Houston, Texas}}
 {{Texas}}
 {{featured article}}
+{{USLargestCities}}
 
 [[Category:1836 establishments]]
 [[Category:County seats in Texas]]
