*Empty MediaWiki Message*

--- a/Fatehpur_Sikri.mw
+++ b/Fatehpur_Sikri.mw
@@ -1,6 +1,6 @@
 {{Infobox World Heritage Site
 | WHS         = Fatehpur Sikri
-| Image       = [[Image:Audienzhalle .jpg|300px|Diwan-i-Khas – Hall of Private Audience]]
+| Image       = [[Image:Audienzhalle .jpg|300px|Diwan-i-Khas – Siduan ning Pribadung Pamananggap (''Hall of Private Audience'')]]
 | State Party = {{IND}}
 | Type        = Cultural
 | Criteria    = ii, iii, iv
