*Empty MediaWiki Message*

--- a/Template:Infobox_World_Heritage_Site.mw
+++ b/Template:Infobox_World_Heritage_Site.mw
@@ -37,7 +37,7 @@
 {{!-}}
 }}
 |-
-|colspan="2" align="center" style="background:#eee; font-size:110%;"| '''Inscription history'''
+|colspan="2" align="center" style="background:#eee; font-size:110%;"| '''Amlat ning Pangatala'''
 |-
 |'''Pangatala'''
 |style="line-height:150%;"| {{{Year}}}&nbsp; <!--
@@ -54,7 +54,7 @@
                 | 2012=36th | 2013=37th | 2014=38th | 2015=39th | 2016=40th
                 | #default = Unknown
                 }}
-    }} [[World Heritage Site#World Heritage Committee Session|Session]])</small>
+    }} [[World Heritage Site#World Heritage Committee Session|Pulung]])</small>
 |-
 {{#if:{{{Extension|<noinclude>-</noinclude>}}} |<!--then:-->
 {{!}} '''Suglung'''
