*Empty MediaWiki Message*

--- a/Gandhinagar.mw
+++ b/Gandhinagar.mw
@@ -6,7 +6,7 @@
 | longd = 72.68
 | locator_position = right
 | skyline = SACHIVALAY_PANORAMA.jpg
-| skyline_caption = Panorama of the Gujarat Legislative Assembly
+| skyline_caption = Maleparan a pangakua ning Gujarat Legislative Assembly
 | state_name = Gujarat
 | district = [[Gandhinagar district|Gandhinagar]]
 | altitude = 81
