*Empty MediaWiki Message*

--- a/Gangtok.mw
+++ b/Gangtok.mw
@@ -2,7 +2,7 @@
 |native_name=Gangtok 
 |type=capital 
 ||skyline               = Gangtok.jpg
-|skyline_caption       = '''Gangtok''' as viewed from the opposite hill
+|skyline_caption       = Ing '''Gangtok''' manibat king kasumangid a talimunduk
 |locator_position=left
 |latd = 27.33 | longd = 88.62
 |state_name=Sikkim 
