*Empty MediaWiki Message*

--- a/Howrah,_India.mw
+++ b/Howrah,_India.mw
@@ -45,7 +45,7 @@ Ing '''Howrah''' or '''Haora''' ([[Bengali language|Bengali]] হাওড়া
 
 [[bn:হাওড়া]]
 [[de:Haora]]
-[[en:Howrah, India
+[[en:Howrah, India]]
 [[bpy:হাওড়া]]
 [[lt:Haura]]
 [[nl:Haora (stad)]]
