*Empty MediaWiki Message*

--- a/Harsawa.mw
+++ b/Harsawa.mw
@@ -22,7 +22,7 @@ website = |
 footnotes = |
 }}
 
-[[Image:Rohida1.jpg|frame|''Tecomella undulata'' tree in Harsawa village.]]
+[[Image:Rohida1.jpg|frame|Ing pun dutung a ''Tecomella undulata'' king Harsawa.]]
 Ing '''Harsawa''' ([[Hindi]]: हरसावा, [[IAST]]: Harsāwā) metung yang nayun king distritu ning [[Sikar]] king labuad ning [[Shekhawati]], estadu ning [[Rajasthan]], [[India]]. Atiu iti king [[Fatehpur, Shekhawati|Fatehpur]] Tehsil, 8 km pa-mauli (''south'') king National Highway-11 manibat king balen ning[[w:Fatehpur, Shekhawati|Fatehpur]].
 
 ==Suglung palual==
