*Empty MediaWiki Message*

--- a/Hubballi.mw
+++ b/Hubballi.mw
@@ -2,7 +2,7 @@
 |native_name=Hubballi 
 |locator_position=right 
 |skyline=unkal1.jpg
-|skyline_caption=Unkal lake view 
+|skyline_caption=Bista ning Dano ning Unkal 
 |latd = 15.3617|longd= 75.0849
 |state_name=Karnataka 
 |district=[[Dharwad]] 
