+[[es:Alcantara (Cebú)]]

--- a/Alcantara,_Cebu.mw
+++ b/Alcantara,_Cebu.mw
@@ -29,6 +29,7 @@ Ing Alcantara atin yang 9 a [[barangay]].
 [[ceb:Alcantara, Sugbo]]
 [[de:Alcantara (Cebu)]]
 [[en:Alcantara, Cebu]]
+[[es:Alcantara (Cebú)]]
 [[ilo:Alcantara, Cebu]]
 [[nl:Alcantara (Cebu)]]
 [[pt:Alcantara]]
