/* Pamagaral, Kalinangan, ampong Pasiknangan */

--- a/Makati.mw
+++ b/Makati.mw
@@ -45,6 +45,7 @@ Agiang ing populasyun na kulang yu king kapitnang milyun, ing populasyun na ustu
 *Makati Science High School, a special public secondary school that empowers its teachers and students to create an academic community that promotes collaborative teaching and learning through its special science and technology curriculum.
 *Colegio San Agustin
 *Lyceum of the Philippines College of Law
+*Information and Communications Technology Academy (iAcademy)
 *AMA Computer College
 *Asian Institute of Management (AIM)
 *''University of Makati''
