/* Pamagaral, Kalinangan, ampong Pasiknangan */

--- a/Makati.mw
+++ b/Makati.mw
@@ -52,6 +52,7 @@ Agiang ing populasyun na kulang yu king kapitnang milyun, ing populasyun na ustu
 *Don Bosco Technical Institute
 *Colegio de Sta. Rosa
 *Centro Escolar University Makati
+*Guadalupe Catholic School
 *Makati High School
 *Mapúa Institute of Technology
 *Gen. Pio Del Pilar National High School
