--- a/Pat.mw
+++ b/Pat.mw
@@ -22,7 +22,7 @@ King pamandukit kuayan ampong dutung, gagamitan de murin ing ''[[pat lukub]]'', 
 [[az:İskənə]]
 [[cs:Dláto]]
 [[da:Stemmejern]]
-[[de:Meißel]]
+[[de:Beitel]]
 [[en:Chisel]]
 [[eo:Ĉizilo]]
 [[es:Cincel]]
