Interwiki: en:Chisel -> en:Woodworking chisel

--- a/Pat.mw
+++ b/Pat.mw
@@ -23,7 +23,7 @@ King pamandukit kuayan ampong dutung, gagamitan de murin ing ''[[pat lukub]]'', 
 [[cs:Dláto]]
 [[da:Stemmejern]]
 [[de:Beitel]]
-[[en:Chisel]]
+[[en:Woodworking chisel]]
 [[eo:Ĉizilo]]
 [[es:Cincel]]
 [[fi:Taltta]]
