--- a/Pat.mw
+++ b/Pat.mw
@@ -25,7 +25,7 @@ King pamandukit kuayan ampong dutung, gagamitan de murin ing ''[[pat lukub]]'', 
 [[de:Beitel]]
 [[en:Woodworking chisel]]
 [[eo:Ĉizilo]]
-[[es:Cincel]]
+[[es:Formón]]
 [[fi:Taltta]]
 [[fr:Ciseau à bois]]
 [[it:Scalpello]]
