--- a/Pat.mw
+++ b/Pat.mw
@@ -33,7 +33,7 @@ King pamandukit kuayan ampong dutung, gagamitan de murin ing ''[[pat lukub]]'', 
 [[nl:Beitel]]
 [[no:Stemjern]]
 [[pl:Dłuto]]
-[[pt:Cinzel]]
+[[pt:Formão]]
 [[ru:Зубило]]
 [[simple:Chisel]]
 [[sr:Длето]]
