--- a/Dinamarka.mw
+++ b/Dinamarka.mw
@@ -4,7 +4,7 @@ native_name              = ''Kongeriget Danmark'' |
 conventional_long_name   = Kingdom of Denmark |
 common_name              = Denmark |
 image_flag               = Flag of Denmark.svg |
-image_coat               = Denmark coa.png |
+image_coat               = |
 national_motto           = None<sup>1</sup> |
 image_map                = LocationDenmark.png |
 national_anthem          = ''[[Der er et Yndigt Land]]'' (national);<br>''[[Kong Christian]]'' (royal) |
