*Empty MediaWiki Message*

--- a/Abhasya.mw
+++ b/Abhasya.mw
@@ -1,12 +1,208 @@
-{{ {{{1<noinclude>|country showdata</noinclude>}}}
-| alias = Abkhazia
-| flag alias = Flag of Abkhazia.svg
-| flag alias-SSR  = Flag of Abkhazian SSR.svg
-| size = {{{size|}}}
-| name = {{{name|}}}
-| altlink = {{{altlink|}}}
-| variant = {{{variant|}}}
-<noinclude>
-| var1 = SSR
-</noinclude>
+{{Infobox Country <!----Non-political information---->
+|native_name    = <span style="line-height:1.33em;">{{unicode|Аҧсны}} / ''Apsny'' <small>([[Abkhaz language|Abkhaz]])</small><br/>'''აფხაზეთი'''  / ''Apkhazeti'' <small>([[Georgian language|Georgian]])</small><br/>Абхазия / ''Abkhaziya'' <small>([[Russian language|Russian]])</small></span>
+|conventional_long_name = <span style="line-height:1.33em;">Abkhazia</span>
+|common_name    = Abkhazia
+|image_map      = Abkhazia detail map2.png
+|image_map2     = LocationAbkhazia2.png
+|map_caption2   = Karinan ning Abkhazia (madalumdum a aluntiang, pepadurutan)<br/>kilub ning  [[Georgia (bangsa)|Georgia]] (masalang aluntian)
+|area_rank      = 
+|area_magnitude = 
+|area_km2       = 8,432
+|area_sq_mi     = 3,256
+|percent_water  = negligible
+|population_estimate      = between 157,000 and 190,000;{{smallsup|1}}<br/>177,000{{smallsup|2}}
+|population_estimate_rank = 
+|population_estimate_year = 2006
+|population_census        = 216,000 (disputed)
+|population_census_year   = 2003
+|population_density_km2   = 29
+|population_density_sq_mi = 
+|population_density_rank  = 
+|time_zone      = [[Moscow Time|MSK]]
+|utc_offset     = +3
+|time_zone_DST  = 
+|utc_offset_DST = 
+|footnote1 = [[International Crisis Group]].{{Fact|date=July 2008}}
+|footnote2 = [[Encyclopædia Britannica]].
+}}
+<!------------------------- Abkhazia-------------------------->
+{{Infobox Country or territory
+|conventional_long_name = Abkhazia
+|common_name        = Abkhazia
+|image_flag         = Flag of Abkhazia.svg
+|image_coat         = Abkhazia COA.svg
+|national_motto     = 
+|national_anthem    = {{lang|cy|"''[[Aiaaira]]''"}}<br/><small>("Victory")</small>
+|official_languages = [[Abkhaz language|Abkhaz]], [[Russian language|Russian]]{{smallsup|1}}
+|capital            = [[Sukhumi]]
+|latd=43 |latm=00 |latNS=N |longd=40 |longm=59 |longEW=E
+|government_type    = 
+|leader_title1      = [[List of Presidents of Abkhazia|President]]
+|leader_name1       = [[Sergei Bagapsh]]
+|leader_title2      = [[List of Prime Ministers of Abkhazia|Prime Minister]]
+|leader_name2       = [[Alexander Ankvab]]
+|sovereignty_type   = ''De facto'' independence from [[Georgia (country)|Georgia]]
+|established_event1 = Declared
+|established_date1  = [[23 July]] [[1992]]
+|established_event2 = Recognition
+|established_date2  = none
+|currency           = [[Russian ruble]]
+|currency_code      = RUB
+|footnote1 = Russian has [http://www.abkhaziya.info/GOS/GOS3.htm co-official status] and widespread use by government and other institutions.
+}}
+<!--------------------Autonomous Republic of Abkhazia
+{{Infobox Country or territory
+|conventional_long_name = Autonomous Republic of Abkhazia
+|common_name        = Georgia (country)
+|image_map          = Georgia Abkhazeti map.png
+|map_caption        = <div style="padding-top:0.3em; line-height:1.0em;">Location of Abkhazia<br/>within [[Georgia (country)|Georgia]]</div>
+|image_flag         = Flag of Georgia.svg
+|image_coat         = Coat of arms of Georgia.svg
+|national_anthem    = "[[Tavisupleba|თავისუფლება]]"<br/><small>"Freedom"</small>
+|capital            = [[Sukhumi]] (''de jure'')<br/>[[Chkhalta]] (''de facto'')
+|latd= |latm= |latNS= |longd= |longm= |longEW=
+|official_languages = [[Abkhaz language|Abkhaz]], [[Georgian language|Georgian]]
+|government_type    = 
+|leader_title1      = Chairman,<br/>Cabinet of Ministers
+|leader_name1       = <br/>{{nowrap|[[Malkhaz Akishbaia]]}}
+|leader_title2      = Chairman, Supreme&nbsp;Council
+|leader_name2       = [[Temur Mzhavia]]
+|sovereignty_type   = [[Autonomous republic]] of [[Georgia (country)|Georgia]]
+|established_event1 = Georgian&nbsp;independence<br/>{{nowrap|from the [[Soviet Union]]}}<br/><div align="right">Declared</br>Recognised</div>
+|established_date1  = <br/><br/>[[9 April]] [[1991]]<br/>[[25 December]] [[1991]]
+|currency           = [[Georgian lari]]
+|currency_code      = GEL
+}}
+---------------
+
+
+
+== Galleria ning Abkhazia ==
+<center>
+<gallery>
+Image: Novoafonsky monastyr.jpg| Bayung Athos monastery
+Image: GagraColonnade.jpg| Gagra
+Image: Gegsky1.jpg| Geg buntu
+Image: Sukhum1.jpg| View of Sukhumi 1
+Image: Aloisi_villa_Sukhumi.jpg| View of Sukhumi 2
+Image:On_quay._Sukhum.jpg|Sukhumi quay
+Image:Botanical garden.Sukhum.jpg|Sukhumi botanical garden arap piluban
+Image:Dramatic theatre Chanba.jpg|Chanba Dramatic theatre king Sukhumi
+</gallery></center>
+
+==Lawen ya rin==
+*[[Law enforcement in Abkhazia]]
+*[[Military of Abkhazia]]
+*[[Sport in Abkhazia]]
+*[[Abkhaz literature]]
+*[[South Ossetia]]
+
+== Dalerayan ==
+{{reflist|2}}
+
+==Suglung Palual==
+{{wikiatlas|Abkhazia}}
+{{commons|Abkhazia}}
+{{Wiktionary}}
+{{wikisource|Special:Search/Abkhazia|Abkhazia}}
+*{{en icon}}/{{ru icon}}/{{ka icon}} [http://www.abkhazia.gov.ge/ Government of the Autonomous Republic of Abkhazia. Official web-page]
+*{{en icon}}/{{ru icon}}/{{tr icon}}/{{ab icon}} [http://www.abkhaziagov.org/en/ President of the Republic of Abkhazia. Official site]
+*{{en icon}}/{{ru icon}}/{{tr icon}} [http://www.mfaabkhazia.org/Eng/index.htm Ministry of Foreign Affairs of the Republic of Abkhazia. Official Site]
+*{{en icon}} [http://news.bbc.co.uk/1/hi/world/europe/3261059.stm BBC Regions and territories: Abkhazia]
+*{{en icon}} [http://www.nplg.gov.ge/ic/library_e/gabeskiria/20.htm The Autonomous Republic of Abkhazeti - from Georgian National Parliamentary Library]
+*{{en icon}} [http://www.abkhazia.com/ Abkhazia.com Official website of the refugees from Abkhazia] 
+*{{ru icon}} [http://www.apsnypress.info/index.htm State Information Agency of the Abkhaz Republic]
+*{{en icon}} [http://numismondo.com/pm/abz Abkhazia Provisional Paper Money]
+*{{ru icon}} [http://www.abkhazian-churches.ru/index.html Orthodox Churches of Abkhazia]
+*{{en icon}} [http://www.newsgeorgia.org/conflicts/ Abkhazia and South Ossetia: Georgia's rebel regions] news portal
+*{{ru icon}} [http://kolhida.ru/ Archaeology and ethnography of Abkhazia. Abkhaz Institute of Social Studies. Abkhaz State Museum]
+
+{{Template group
+|title = Geographic locale
+|list  =
+{{Administrative divisions of Georgia}}
+{{Countries and regions of the Caucasus}}
+{{Non-sovereign territories of Europe}}
+}}
+
+<!--Categories-->
+[[Category:Abkhazia| ]]
+[[Category:Russian-magsalitang bangsa ampong territoryu]]
+[[Category:Caucasus]]
+
+{{Link FA|sv}}
+{{Link FA|es}}
+<!--Interwikis-->
+
+[[af:Abkasië]]
+[[ab:Аҧсны Аҳәынҭқарра]]
+[[ar:أبخازيا]]
+[[an:Abjasia]]
+[[frp:Abkhazie]]
+[[bn:আবখাজিয়া]]
+[[be:Абхазія]]
+[[be-x-old:Абхазія]]
+[[bs:Abhazija]]
+[[bg:Абхазия]]
+[[ca:Abkhàzia]]
+[[cv:Абхази]]
+[[cs:Abcházie]]
+[[da:Abkhasien]]
+[[de:Abchasien]]
+[[en:Abkhazia]]
+[[et:Abhaasia]]
+[[el:Αμπχαζία]]
+[[es:Abjasia]]
+[[eo:Abĥazio]]
+[[eu:Abkhazia]]
+[[fa:آبخاز]]
+[[fr:Abkhazie]]
+[[gv:Abkhazia]]
+[[gl:Abkhazia]]
+[[ko:압하스 공화국]]
+[[hy:Աբխազիա]]
+[[hi:अबखाजिया]]
+[[hr:Abhazija]]
+[[id:Abkhazia]]
+[[os:Абхази]]
+[[is:Abkasía]]
+[[it:Abkhazia]]
+[[he:אבחזיה]]
+[[jv:Abkhazia]]
+[[ka:აფხაზეთის ავტონომიური რესპუბლიკა]]
+[[kk:Абхазия]]
+[[kv:Абхазия]]
+[[la:Abasci]]
+[[lv:Abhāzija]]
+[[lt:Abchazija]]
+[[hu:Abházia]]
+[[mk:Абхазија]]
+[[ms:Abkhazia]]
+[[nl:Abchazië]]
+[[ja:アブハジア]]
+[[no:Abkhasia]]
+[[nn:Abkhasia]]
+[[pl:Abchazja]]
+[[pt:Abecásia]]
+[[ro:Abhazia]]
+[[ru:Абхазия]]
+[[sco:Abkhazia]]
+[[simple:Abkhazia]]
+[[sk:Abcházsko]]
+[[sr:Абхазија]]
+[[sh:Abhazija]]
+[[fi:Abhasia]]
+[[sv:Abchazien]]
+[[tl:Abkhazia]]
+[[ta:அப்காசியா]]
+[[tt:Abxazía]]
+[[te:అబ్‌ఖజియా]]
+[[vi:Abkhazia]]
+[[tr:Abhazya]]
+[[tk:Abhaziýa]]
+[[uk:Абхазія]]
+[[vo:Labkasän]]
+[[yo:Abkhez]]
+[[zh:阿布哈茲]]
+
 }}
