*Empty MediaWiki Message*

--- a/Abhasya.mw
+++ b/Abhasya.mw
@@ -49,6 +49,74 @@
 ---------------
 
 
+==Demographicu==
+
+{| class="wikitable"
+ !Banua
+ !Eganagana
+ !Georgian
+ !Abkhaz 
+ !Russians
+ !Armenian
+ !Greek
+ |-
+ |1926 Census
+ |186,004
+ |67,494
+ |55,918
+ |12,553
+ |25,677
+ |14,045
+ |-
+ |1939 Census
+ |311,885
+ |91,967
+ |56,197
+ |60,201
+ |49,705
+ |34,621
+ |-
+ |1959 Census
+ |404,738
+ |158,221
+ |61,193
+ |86,715
+ |64,425
+ |9,101
+ |-
+ |1970 Census
+ |486,959
+ |199,596
+ |77,276
+ |92,889
+ |74,850
+ |13,114
+ |-
+ |1979 Census
+ |486,082
+ |213,322
+ |83,087
+ |79,730
+ |73,350
+ |13,642
+ |-
+ |1989 Census
+ |525,061
+ |239,872
+ |93,267
+ |74,913
+ |76,541
+ |14,664
+ |-
+ |2003 Census<big>{{rf|1|***}}</big>
+ |215,972
+ |45,953
+ |94,606
+ |23,420
+ |44,870
+ |1,486
+ |}
+
 
 == Galleria ning Abkhazia ==
 <center>
