*Empty MediaWiki Message*

--- a/Abhasya.mw
+++ b/Abhasya.mw
@@ -47,7 +47,7 @@
 |currency_code      = GEL
 }}
 
-==Demographicu==
+===Demographicu===
 
 {| class="wikitable"
  !Banua
@@ -243,5 +243,3 @@ Image:Dramatic theatre Chanba.jpg|Chanba Dramatic theatre king Sukhumi
 [[vo:Labkasän]]
 [[yo:Abkhez]]
 [[zh:阿布哈茲]]
-
-}}
