*Empty MediaWiki Message*

--- a/Abhasya.mw
+++ b/Abhasya.mw
@@ -1,4 +1,4 @@
-{{Infobox Country <!----Non-political information---->
+{{Infobox Country
 
 |conventional_long_name = Abkhazia
 |common_name        = Abkhazia
