*Empty MediaWiki Message*

--- a/Tala_da_reng_balen_ning_Valladolid.mw
+++ b/Tala_da_reng_balen_ning_Valladolid.mw
@@ -687,7 +687,7 @@ Iti ing tala da reng [[balen]] king [[provinces of Spain|lalawigan]] ning [[Vall
 *[[Geografia ning Espanya]]
 *[[Tala da reng lakanbalen king Espanya]]
 
-[[Category:Municipalities in Valladolid| ]]
+[[Category:Balen king Valladolid| ]]
 [[Category:Tala da reng balen king Espanya|Valladolid]]
 
 [[an:Lista de monezipios de Balladolit]]
