*Empty MediaWiki Message*

--- a/Ding_Labuad_ning_Tseka_Republika.mw
+++ b/Ding_Labuad_ning_Tseka_Republika.mw
@@ -71,6 +71,26 @@ Manibat inyang 2000 ing  [[Czech Republic]] atin yang labingatlung ''[[kraj]]e''
 |width="60px"| 10,220,577 ||width="58px"| 78,868 ||width="60px"| 130
 |width="57px"| 2,767,717  ||width="69px"| 271,161
 |}
+
+=== Sagisag da reng Labuad ning Czech ===
+<gallery>
+Image:Praha CoA CZ.svg|[[Hlavní město Praha]]
+Image:Central Bohemian Region CoA CZ.svg| [[Středočeský kraj]]
+Image:South Bohemian Region CoA CZ.svg| [[Jihočeský kraj]]
+Image:Plzen Region CoA CZ.svg| [[Plzeňský kraj]]
+Image:Karlovy Vary Region CoA CZ.svg| [[Karlovarský kraj]]
+Image:Usti nad Labem Region CoA CZ.svg| [[Ústecký kraj]]
+Image:Liberec Region CoA CZ.svg| [[Liberecký kraj]]
+Image:Hradec Kralove Region CoA CZ.svg| [[Královéhradecký kraj]]
+Image:Pardubice Region CoA CZ.svg| [[Pardubický kraj]]
+Image:CZE Kraj Wysoczyzna COA.svg| [[kraj Vysočina]]
+Image:South Moravian Region CoA CZ.svg| [[Jihomoravský kraj]]
+Image:Olomouc Region CoA CZ.svg| [[Olomoucký kraj]]
+Image:Zlin Region CoA CZ.svg| [[Zlínský kraj]]
+Image:Moravian-Silesian Region CoA CZ.svg| [[Moravskoslezský kraj]]
+Image:CoA CZ regions.png|Location of Czech regions in the map
+</gallery>
+
 {{smaller|¹ 2004 estimate.}} 
 [[http://cs.wikipedia.org/wiki/Česko#.C3.9Azemn.C3.AD_kraje | updated numbers and source (in czech)]]
 ==Lawen ya rin==
