Interwiki: eo:Ĉizilo -> eo:Ĉizilo por ligno, it:Scalpello -> it:Scalpello da legno, simple:Chisel -> simple:Woodworking chisel

--- a/Pat.mw
+++ b/Pat.mw
@@ -24,18 +24,18 @@ King pamandukit kuayan ampong dutung, gagamitan de murin ing ''[[pat lukub]]'', 
 [[da:Stemmejern]]
 [[de:Beitel]]
 [[en:Woodworking chisel]]
-[[eo:Ĉizilo]]
+[[eo:Ĉizilo por ligno]]
 [[es:Formón]]
 [[fi:Taltta]]
 [[fr:Ciseau à bois]]
-[[it:Scalpello]]
+[[it:Scalpello da legno]]
 [[ja:鑿]]
 [[nl:Beitel]]
 [[no:Stemjern]]
 [[pl:Dłuto]]
 [[pt:Formão]]
 [[ru:Зубило]]
-[[simple:Chisel]]
+[[simple:Woodworking chisel]]
 [[sr:Длето]]
 [[sv:Stämjärn]]
 [[te:ఉలి]]
