Bot: Adding {{Commonscat|Universities and colleges in the Philippines}}

--- a/Category:Ding_Universidad_at_Colegiu_king_Filipinas.mw
+++ b/Category:Ding_Universidad_at_Colegiu_king_Filipinas.mw
@@ -1,8 +1,9 @@
+{{Commonscat|Universities and colleges in the Philippines}}
+
 [[Category:Pamagaral king Filipinas]]
 [[Category:Ding Pipagaralan king Filipinas]]
 [[Category:Ding Universidad at colegiu king Asia]]
 [[Category:Ding Universidad at colegiu agpang keng bangsa|Filipinas]]
-
 
 [[en:Category:Universities and colleges in the Philippines]]
 [[es:Categoría:Universidades de Filipinas]]
