Bot: Adding {{Commonscat|Popes}}

--- a/Category:Papa.mw
+++ b/Category:Papa.mw
@@ -1,5 +1,5 @@
 {{Commons cat|Popes}}
-
+{{Commonscat|Popes}}
 
 [[Category:Bishops by type]]
 [[Category:Church patriarchs|Rome]]
@@ -14,8 +14,8 @@
 [[Category:Catholic bishops]]
 
 [[af:Kategorie:Pouse]]
-[[ar:تصنيف:باباوات]]
 [[an:Categoría:Papas]]
+[[ar:تصنيف:باباوات]]
 [[ast:Categoría:Papa]]
 [[az:Kateqoriya:Papalar]]
 [[be:Катэгорыя:Папы рымскія]]
@@ -27,59 +27,59 @@
 [[cy:Categori:Pabau]]
 [[da:Kategori:Paver]]
 [[de:Kategorie:Papst]]
-[[en:Category:Popes]]
-[[et:Kategooria:Paavstid]]
 [[el:Κατηγορία:Πάπες Ρώμης]]
-[[es:Categoría:Papas]]
+[[en:Category:Popes]]
 [[eo:Kategorio:Papoj]]
+[[es:Categoría:Papas]]
+[[et:Kategooria:Paavstid]]
 [[eu:Kategoria:Aita Santuak]]
 [[fa:رده:پاپ‌ها]]
+[[fi:Luokka:Paavit]]
 [[fo:Bólkur:Pávi]]
 [[fr:Catégorie:Pape]]
 [[fy:Kategory:Paus]]
 [[gl:Categoría:Papas]]
-[[ko:분류:교황]]
+[[he:קטגוריה:אפיפיורים]]
 [[hr:Kategorija:Pape]]
-[[io:Kategorio:Papi]]
+[[hu:Kategória:Pápák]]
 [[id:Kategori:Paus]]
+[[io:Kategorio:Papi]]
 [[is:Flokkur:Páfar]]
 [[it:Categoria:Papi]]
-[[he:קטגוריה:אפיפיורים]]
+[[ja:Category:教皇]]
 [[jv:Kategori:Paus]]
 [[ka:კატეგორია:რომის პაპები]]
-[[sw:Category:Papa]]
+[[ko:분류:교황]]
 [[la:Categoria:Papae]]
-[[lv:Kategorija:Romas pāvesti]]
 [[lb:Kategorie:Peepst]]
-[[lt:Kategorija:Popiežiai]]
 [[ln:Catégorie:Pápa]]
-[[hu:Kategória:Pápák]]
+[[lt:Kategorija:Popiežiai]]
+[[lv:Kategorija:Romas pāvesti]]
 [[mr:वर्ग:पोप]]
 [[ms:Kategori:Paus]]
-[[nl:Categorie:Paus]]
-[[ja:Category:教皇]]
-[[no:Kategori:Paver]]
-[[nn:Kategori:Pavar]]
-[[oc:Categoria:Papa]]
-[[pms:Categorìa:Papa]]
 [[nds:Kategorie:Paapst]]
+[[nl:Categorie:Paus]]
+[[nn:Kategori:Pavar]]
+[[no:Kategori:Paver]]
+[[oc:Categoria:Papa]]
 [[pl:Kategoria:Papieże]]
+[[pms:Categorìa:Papa]]
 [[pt:Categoria:Papas]]
 [[ro:Categorie:Papi]]
 [[ru:Категория:Папы римские]]
-[[sco:Category:Papes]]
 [[scn:Catigurìa:Papi]]
+[[sco:Category:Papes]]
 [[simple:Category:Popes]]
 [[sk:Kategória:Pápeži]]
 [[sl:Kategorija:Papeži]]
 [[sr:Категорија:Папе]]
-[[fi:Luokka:Paavit]]
 [[sv:Kategori:Påvar]]
-[[tl:Category:Mga papa]]
+[[sw:Category:Papa]]
 [[th:หมวดหมู่:พระสันตะปาปา]]
-[[vi:Thể loại:Giáo hoàng]]
+[[tl:Category:Mga papa]]
 [[tr:Kategori:Papalar]]
 [[uk:Категорія:Папи]]
 [[vec:Categoria:Papi]]
+[[vi:Thể loại:Giáo hoàng]]
 [[vls:Categorie:Paus]]
 [[zh:Category:教宗]]
