--- a/Category:Regions_of_the_United_States.mw
+++ b/Category:Regions_of_the_United_States.mw
@@ -1,3 +1,5 @@
+{{Commonscat|Regions of the United States}}
+
 [[Category:Geografía na ning United States]]
 [[Category:Pamiparti na ning United States]]
 
