*Empty MediaWiki Message*

--- a/Guntur.mw
+++ b/Guntur.mw
@@ -1,4 +1,4 @@
-{{otheruses1|a city in India}}
+{{otheruses1|lakanbalen king India}}
 <!-- See [[Wikipedia:WikiProject Indian cities]] for details -->
 {{Infobox Indian Jurisdiction
 |type                   = City
@@ -7,7 +7,7 @@
 |nickname               = City of Spices
 |state_name             = Andhra Pradesh
 |skyline                = Gmc2.JPG
-|skyline_caption        = A primary road through the centre of the Municipal Corporation of Guntur.
+|skyline_caption        = Metung a manimunang dalan king Municipal Corporation ning Guntur.
 |latd                   = 16.3008
 |longd                  = 80.4428
 |locator_position       = right
