*Empty MediaWiki Message*

--- a/Guwahati.mw
+++ b/Guwahati.mw
@@ -2,7 +2,7 @@
 <!-- See [[Wikipedia:WikiProject Indian cities]] for details -->{{Infobox Indian Jurisdiction |
 native_name=Guwahati |
 skyline             = Guwahati citysky.jpg|
-skyline_caption     = A view of the city|
+skyline_caption     = Metung a bista ning lakanbalen|
 locator_position=left |
 latd = 26.17|longd=91.77|
 state_name=Assam |
