--- a/Beijing.mw
+++ b/Beijing.mw
@@ -18,7 +18,7 @@
 |shield_size            =
 |city_logo              =
 |citylogo_size          =
-|image_map              = China-Beijing.png
+|image_map              = China Beijing.svg
 |mapsize                = 275px
 |map_caption            = Location within China
 |image_map1             = 
