*Empty MediaWiki Message*

--- a/Hyderabad,_India.mw
+++ b/Hyderabad,_India.mw
@@ -6,7 +6,7 @@
 |nickname = ''The City of Pearls, The City of the Nizams.''
 |state_name        = Andhra Pradesh
 |skyline           = Hyderabad india .jpg
-|skyline_caption   = [[Charminar]], the most enduring symbol of the city
+|skyline_caption   = Ing [[Charminar]], ing kabalitan diling sagisag ning lakanbalen
 |latd              = 17.366 
 |longd             = 78.476
 |locator_position  = right
