*Empty MediaWiki Message*

--- a/Jaisalmer.mw
+++ b/Jaisalmer.mw
@@ -1,5 +1,5 @@
 {{nofootnotes}}
-''This article is about the city of India. For historical region and state, see also [[Jaisalmer state]]''
+''Ining articulu tungkul ya king lakanbalen ning India. Para king labuad ampong estadu king kasalesayan, lon me ing [[Jaisalmer (estadu)]]''
 
 {{Infobox Indian Jurisdiction |
 native_name=Jaisalmer |
