*Empty MediaWiki Message*

--- a/Jalgaon.mw
+++ b/Jalgaon.mw
@@ -27,7 +27,7 @@ Ing '''Jalgaon''' (जळगाव) metung yang lakanbalen king India, ketang [[
 == Suglung palual ==
 * {{Official|http://jalgaon.nic.in/}}
 
-==Dalerayan
+== Dalerayan ==
 {{reflist}}
 
 [[Category:Cities and towns in Maharashtra]]
