*Empty MediaWiki Message*

--- a/Jamnagar.mw
+++ b/Jamnagar.mw
@@ -21,7 +21,7 @@
 ||footnotes = 
 }}
 
-Ing '''Jamnagar''' metung yang lakanbalen o ciudad ampong metung a [[w:municipal corporation|municipal corporation]] king [[Estadu ampong teritoriu ning India|estadu]] ning [[Gujarat]], [[India]]. Atiu king mauli (''south'') ning [[w:Gulf of Kutch|Gulf of Kutch]]. Sinikat ya ing Jamnagar aniang telakad ne ning [[Reliance Industries]], ing maragul nang diling privadung cumpania ning India, malapit king nayun ning [[Moti Khavdi]] ing pekamaragul a [[w:refinery|refinery]] king mabilug a yatu.{{Fact|date=March 2008}} It is also home to [[Essar Oil]], another important oil refinery of India.{{Fact|date=March 2008}}   
+Ing '''Jamnagar''' metung yang lakanbalen o ciudad ampong metung a [[w:municipal corporation|municipal corporation]] king [[Estadu ampong teritoriu ning India|estadu]] ning [[Gujarat]], [[India]]. Atiu king mauli (''south'') ning [[w:Gulf of Kutch|Gulf of Kutch]]. Sinikat ya ing Jamnagar aniang telakad ne ning [[Reliance Industries]], ing maragul nang diling privadung cumpania ning India, malapit king nayun ning [[Moti Khavdi]] ing pekamaragul a [[w:refinery|refinery]] king mabilug a yatu.{{Fact|date=March 2008}} 
 
 ==Suglung palual==
 * [http://www.jamnagar.org Tourist information about Jamnagar]
