*Empty MediaWiki Message*

--- a/Jamshedpur.mw
+++ b/Jamshedpur.mw
@@ -25,7 +25,7 @@
 
 }}
 
-Ing '''Jamshedpur''' {{audio|Jamshedpur.ogg|pronunciation}} ('''जमशेदपुर''' in [[Devanagari]]) metung yang lakanbalen o ciudad king estadu ning [[Jharkhand]] king [[India]], a tetag ning meangubie [[Jamshedji Tata|Jamshedji Nusserwanji Tata]], ing sangkan nung bakit ausan deng ''Tata'' ining lakanbalen. Atiu iti king distritu ning [[w:East Singhbhum|Singhbhum]], [[Jharkhand]], king matas a kapatagan (''plateau'') ning [[w:Chota Nagpur Plateau|Chota Nagpur]]. Padurutan de iti deng [[w:Dalma Hills|Talimunduk ning Dalma]].  Ini ing mumunang lakanbalen a meplanu (''planned city'') king India, at tetag ne ning [[w:Tata Steel|Tata Steel]]. 
+Ing '''Jamshedpur''' {{audio|Jamshedpur.ogg|pronunciation}} ('''जमशेदपुर''' king [[Devanagari]]) metung yang lakanbalen o ciudad king estadu ning [[Jharkhand]] king [[India]], a tetag ning meangubie [[Jamshedji Tata|Jamshedji Nusserwanji Tata]], ing sangkan nung bakit ausan deng ''Tata'' ining lakanbalen. Atiu iti king distritu ning [[w:East Singhbhum|Singhbhum]], [[Jharkhand]], king matas a kapatagan (''plateau'') ning [[w:Chota Nagpur Plateau|Chota Nagpur]]. Padurutan de iti deng [[w:Dalma Hills|Talimunduk ning Dalma]].  Ini ing mumunang lakanbalen a meplanu (''planned city'') king India, at tetag ne ning [[w:Tata Steel|Tata Steel]]. 
 
 ==Dalerayan==
 {{reflist}}
