--- a/Suesia.mw
+++ b/Suesia.mw
@@ -4,7 +4,7 @@
 |conventional_long_name = Kingdom of Sweden
 |common_name = Sweden
 |image_flag = Flag of Sweden.svg
-|image_coat = Sweden greater arms.png
+|image_coat = Sweden greater coa1908-modern.png
 |symbol_type = Coat of arms
 |image_map = LocationSweden.png
 |national_motto = ''För Sverige i tiden''<sup>1</sup><br />([[Swedish language|Swedish]]: "For Sweden, with the times")
