*Empty MediaWiki Message*

--- a/Kakinada.mw
+++ b/Kakinada.mw
@@ -1,6 +1,6 @@
 <!-- See [[Wikipedia:WikiProject Indian cities]] for details -->{{Infobox Indian Jurisdiction | 
 |type                    = city
-|native_name             = KAKINADA (formerly known as COCANADA)
+|native_name             = KAKINADA (a sadia rang ausang COCANADA)
 |other_name              = 
 |state_name              = Andhra Pradesh
 |latd                    = 16.93
