*Empty MediaWiki Message*

--- a/Template:Lang-ml.mw
+++ b/Template:Lang-ml.mw
@@ -2,8 +2,9 @@
 <noinclude>
 [[Category:Multilingual support templates|Lang-ml]]
 
+[[en:Template:Lang-ml]]
 [[mk:Шаблон:Lang-ml]]
 [[ja:Template:Lang-ml]]
 [[fi:Malline:K-ml]]
-[[pam:Template:Lang-ml]]
+
 </noinclude>
