*Empty MediaWiki Message*

--- a/Kalwa,_Thane.mw
+++ b/Kalwa,_Thane.mw
@@ -1,5 +1,5 @@
 {{otheruses|Kalwa, Rajasthan}}
-[[Image:Mumbai_KALWA.gif|thumb|right|Location of Kalwa]]
+[[Image:Mumbai_KALWA.gif|thumb|right|Ing kabilian ning Kalwa]]
 
 Ing '''Kalwa''' metung yang malating balen king bandang lual (''outskirts'') ning lakanbalen o ciudad ning [[Mumbai]]. Atiu iti king pangulung (''northern'') Thane, at karulun (''suburb'') ne ning lakanbalen ning Thane. Sakup ne ning Thane Municipal Corporation ing Kalwa. 
 
