*Empty MediaWiki Message*

--- a/Racha-Lechkhumi_at_Kvemo_Svaneti.mw
+++ b/Racha-Lechkhumi_at_Kvemo_Svaneti.mw
@@ -8,17 +8,17 @@ Rach'a-Lechkhumis da<br/> Kvemo Svanetis mkhare
 |-
 ! colspan="2" bgcolor=#CDC673 | General info
 |-
-| Region [[ISO 3166]] code: || GE-RL
+| Labuad [[ISO 3166]] code: || GE-RL
 |-
-| Area:  || 4,954 km²
+| lualas:  || 4,954 km²
 |-
-| Population: || 51,000 (2002)
+| Populasyun: || 51,000 (2002)
 |-
-| Subdivision: || 4 a labuad
+| Pangadake: || 4 a labuad
 |-
-| Capital: || [[Ambrolauri]]
+| Tungku: || [[Ambrolauri]]
 |-
-| Governor: || Otar Siradze
+| Gobernador: || Otar Siradze
 |-
 |}
 
